--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -23,6 +23,7 @@ jobs:
   build:
     name: Build distribution
     if: startsWith(github.ref, 'refs/tags/')
+    needs: format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
