--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -69,6 +69,7 @@ jobs:
       contents: write
       id-token: write
     steps:
+      - uses: actions/checkout@v6
       - name: Download distributions
         uses: actions/download-artifact@v4
         with:
